# GraphConductFrame

./: CMakeLists.txt  README.md
BrowserFrameWork/: app.js  package-lock.json  package.json
BrowserFrameWork/WebSocketParaSetting/: ws_paraSetting.html  ws_paraSetting.js
BrowserFrameWork/assembly/: simple_table.js
BrowserFrameWork/mainFrame/: mainFrame.css  mainFrame.html  mainFrame.js  mainFrameGoodNow.js
BrowserFrameWork/mainFrameShowDiv/: winMainFrameShowDiv.html  winMainFrameShowDiv.js
ServerTest/: CMakeLists.txt  ServerEndPoint.hpp  WebSocketCommon.hpp  metaConnection.hpp  server_main.cpp
cppClient/: CMakeLists.txt  ReadMe.txt  main.cpp
pythonclient/: client_rec_send_demo.py  client_rec_send_demo2.py  client_send_pic.py  client_send_pic2.py  client_send_pic3.py  client_send_pic4.py  readme.txt
utility/: utility.hpp
websocketpp/impl/: connection_impl.hpp
