cmake_minimum_required(VERSION 3.6)
project(WilliamNet)
message("now_pos_is: "${CMAKE_CURRENT_SOURCE_DIR})
set(CMAKE_CXX_STANDARD 17)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/asio-1.18.1/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/utility)
#add_subdirectory(${CMAKE_SOURCE_DIR}/SimpleExample)
#add_subdirectory(${CMAKE_SOURCE_DIR}/ClientTest)
add_subdirectory(${CMAKE_SOURCE_DIR}/ServerTest)
#add_subdirectory(${CMAKE_SOURCE_DIR}/utility)
